<resources>
    <string name="app_name">绿趣护眼</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_openBluePermission">是否允许获取蓝牙连接权限？</string>
    <string name="allow">允许</string>
    <string name="notallow">不允许</string>
    <string name="unbind">未连接</string>
    <string name="binded">已连接</string>
    <string name="add_device">添加设备</string>
    <string name="reconnecting">重新连接</string>
    <string name="glasses_power">眼镜电量</string>
    <string name="connecting_failed">连接失败</string>
    <string name="connecting_device_des">请确保您的设备和蓝牙\n处于开启状态</string>
    <string name="connecting_device">正在连接设备</string>
    <string name="connect_device">连接设备</string>
    <string name="select_device">选择设备</string>
    <string name="saved_setting">已保存的设置</string>
    <string name="binding">连接中</string>
    <string name="buy">购买></string>
    <string name="home">首页</string>
    <string name="learn_more_about">进一步了解></string>
    <string name="shop">商城</string>
    <string name="product_detial">商品详情</string>
    <string name="product_evaluate">评价</string>
    <string name="shopping_cart">购物车</string>
    <string name="management">管理</string>
    <string name="confirm_order">确认订单</string>
    <string name="select_shipping_address">选择收货地址</string>
    <string name="add_shipping_address">新增收货地址</string>
    <string name="modify_shipping_address">编辑收货地址</string>
    <string name="my_address">我的地址</string>
    <string name="person_information">个人资料</string>
    <string name="my_order">我的订单</string>
    <string name="my_collection">我的收藏</string>
    <string name="collection">收藏</string>
    <string name="collectioned">已收藏</string>
    <string name="setting">设置</string>
    <string name="share">分享</string>
    <string name="add_to_shopping_cart">加入购物车</string>
    <string name="buy_imidiately">立即购买</string>
    <string name="select_all">全选</string>
    <string name="no_Freight">不含运费</string>
    <string name="count">合计:</string>
    <string name="third_login">第三方登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码</string>
    <string name="register_now">立即注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="get">获取</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="welcome_word">你好，\n欢迎来到%s</string>
    <string name="delete">删除</string>
    <string name="complete">完成</string>
    <string name="money_type">￥</string>
    <string name="submit_order">提交订单</string>
    <string name="order_detail">订单详情</string>

    <string name="delivery_method">配送方式</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="about_us">关于我们</string>
    <string name="safe_account">账户与安全</string>
    <string name="modify_password">设置修改密码</string>
    <string name="next_step">下一步</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_evaluation">我的评价</string>
    <string name="my_distribution">我的分销</string>
    <string name="add">添加</string>
    <string name="withdraw">提现</string>
    <string name="select_zfb_account">选择支付宝账号</string>
    <string name="select_zfb_add">添加支付宝账号</string>
    <string name="select_zfb_edit">编辑支付宝账号</string>
    <string name="save">保存</string>
    <string name="pre_service">售前客服</string>
    <string name="after_service">售后客服</string>
    <string name="daily_sign">每日签到</string>
    <string name="unship">待发货</string>
    <string name="deal_success">交易成功</string>
    <string name="deal_close">交易关闭</string>
    <string name="unpay">待付款</string>
    <string name="unevaluation">未评价</string>
    <string name="unreceipt">已发货</string>
    <string name="sign">签到</string>
    <string name="signed">已签到</string>
    <string name="sign_description">签到说明</string>
    <string name="my_integration">我的积分</string>
    <string name="evaluatation">评价晒单</string>
    <string name="order_progress">订单进度</string>
    <string name="integration_des">积分规则</string>
    <string name="range_rule_active_title">活动规则</string>
    <string name="range_rule_active_des1">1.活动期间，用户分享活动页面给好友或分享到社交平台，好友在分享出去的页面”注册”,接受分享者的邀请。</string>
    <string name="range_rule_active_des2">2.接受邀请者需要是绿趣app的新用户，需要下载绿趣app,至少消费一次，则邀请成功，邀请成功后，分享者即可获得500积分+对应的消费积分，被邀请者同样可获得500积分+对应的消费积分。(每消费1元得1积分)</string>
    <string name="range_rule_active_des3">3.接受邀请者若是老用户可分享活动页面邀请其他新用户。</string>
    <string name="range_rule_reward_title">奖励及说明</string>
    <string name="range_rule_reward_des1">1.分享者邀请成功1位新用户，分享者可获得500积分+对应的消费积分,将会直接存进用户的积分内。</string>
    <string name="range_rule_reward_des2">2.邀请成功后，受邀请用户在平台上面的消费，将会给予受邀请的新用户500积分+对应的消费积分。</string>
    <string name="range_rule_reward_des3">3.新用户只能被成功邀请1次，接受多人邀请时，发放积分计入末位邀请人。</string>
    <string name="range_rule_accept_title">如何查收奖励</string>
    <string name="range_rule_accept_des1">1.邀请积分将会以积分的方式直接放入邀请者的积分内，在我的积分可查看,在平台消费可抵消金额。</string>
    <string name="integration_des_content">1.积分可以在下单结算的时候抵扣现金，1000个积分=1元，满100积分可用。\n2.签到、分享、邀请好友均可可以获得积分。</string>
    <string name="edit_evaluation_hint">产品怎么样？您满意吗？说说您的感受，给想要购买的朋友们一个参考~</string>
    <string name="share_introduce">*将邀请码分享给好友，对方下载绿趣APP并登录后输入\n即可领取3000积分；\n*每成功邀请一位好友，您可以获得3000积分；\n*您所邀请的好友再兴途首单下单成功后，您可获得3000积分;\n*将邀请码分享给好友，对方下载绿趣APP并登录后输入\n即可领取3000积分；</string>
    <string name="sign_introduce">1.每天签到都可获得积分奖励，积分可以在下单结算的时候抵扣现金，1000个积分=1元，满100积分可用。\n2.连续签到以7天为一个周期，每个周期第7天可以获得双倍积分。\n3.如果中途断签，记录会自动清零。</string>

    <string name="general_ok">确定</string>
    <string name="general_cancel">取消</string>
    <string name="general_send">上传</string>
    <string name="general_original">原图</string>
    <string name="bracket_str">(%1$s)</string>
    <string name="bracket_num">(%1$d)</string>
    <string name="error_maximun_nine_photos">最多选择 %1$d 张图片</string>
    <!--<string name="general_all_pictures">所有图片</string>-->
    <string name="general_all_pictures"></string>

</resources>
