<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/home_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_bar"
        android:layout_above="@+id/tv_add_friend"
        android:scrollbars="none"

        >
            <LinearLayout
                android:layout_marginLeft="@dimen/marleft_right15"
                android:layout_marginRight="@dimen/marleft_right15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:textSize="@dimen/textsize16"
                    android:textColor="@color/textcolor_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/range_rule_active_title"
                    />
                
                <TextView
                    android:layout_marginTop="@dimen/marleft_right10"
                    android:lineSpacingExtra="@dimen/marleft_right8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color66"
                    android:textSize="@dimen/textsize14"
                    android:text="@string/range_rule_active_des1"
                    />

                <TextView
                    android:layout_marginTop="@dimen/marleft_right8"
                    android:lineSpacingExtra="@dimen/marleft_right8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color66"
                    android:textSize="@dimen/textsize14"
                    android:text="@string/range_rule_active_des2"
                    />

                <TextView
                    android:lineSpacingExtra="@dimen/marleft_right8"
                    android:layout_marginTop="@dimen/marleft_right8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color66"
                    android:textSize="@dimen/textsize14"
                    android:text="@string/range_rule_active_des3"
                    />

                <TextView
                    android:layout_marginTop="@dimen/marleft_right15"
                    android:textSize="@dimen/textsize16"
                    android:textColor="@color/textcolor_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/range_rule_reward_title"
                    />

                <TextView
                    android:lineSpacingExtra="@dimen/marleft_right8"
                    android:layout_marginTop="@dimen/marleft_right10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color66"
                    android:textSize="@dimen/textsize14"
                    android:text="@string/range_rule_reward_des1"
                    />

                <TextView
                    android:lineSpacingExtra="@dimen/marleft_right8"
                    android:layout_marginTop="@dimen/marleft_right8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color66"
                    android:textSize="@dimen/textsize14"
                    android:text="@string/range_rule_reward_des2"
                    />

                <TextView
                    android:lineSpacingExtra="@dimen/marleft_right8"
                    android:layout_marginTop="@dimen/marleft_right8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color66"
                    android:textSize="@dimen/textsize14"
                    android:text="@string/range_rule_reward_des3"
                    />

                <TextView
                    android:layout_marginTop="@dimen/marleft_right15"
                    android:textSize="@dimen/textsize16"
                    android:textColor="@color/textcolor_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/range_rule_accept_title"
                    />

                <TextView
                    android:lineSpacingExtra="@dimen/marleft_right8"
                    android:layout_marginTop="@dimen/marleft_right10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color66"
                    android:textSize="@dimen/textsize14"
                    android:text="@string/range_rule_accept_des1"
                    />
            </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_add_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="立即邀请好友"
        android:textSize="@dimen/textsize18"
        android:textColor="@color/white"
        android:paddingBottom="@dimen/marleft_right15"
        android:paddingTop="@dimen/marleft_right15"
        android:layout_alignParentBottom="true"
        android:background="@color/color_share_blue"
        android:gravity="center"
        />


</RelativeLayout>