<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/dialog_corner_bg"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_des"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:padding="@dimen/height40"
            android:text="@string/request_openBluePermission"
            android:textSize="@dimen/textsize18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color99"></View>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height48"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_cancel"
                android:gravity="center"
                android:textSize="@dimen/textsize16"
                android:text="@string/notallow"
                android:layout_width="0dp"
                android:textColor="@color/light_blue"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color99"></View>
            <TextView
                android:id="@+id/tv_confirm"
                android:gravity="center"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/textsize16"
                android:text="@string/allow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
