<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="60dp"
        />

    <TextView
        android:id="@+id/tv_welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_word"
        android:layout_above="@+id/et_username"
        android:gravity="center_vertical"
        android:textSize="@dimen/textsize24"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/marleft_right41"
        android:layout_below="@+id/login_logo"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_username"
        android:inputType="phone"
        android:maxLength="11"
        android:layout_above="@+id/et_password"
        android:layout_marginBottom="@dimen/marleft_right10"
        android:layout_marginLeft="@dimen/marleft_right41"
        android:layout_marginRight="@dimen/marleft_right41"
        android:drawableLeft="@mipmap/username_icon"
        android:hint="@string/please_input_username"
        android:drawablePadding="@dimen/marleft_right5"
        android:theme="@style/MyEditText"
        />


    <EditText
        android:maxLength="16"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:layout_above="@+id/btn_login"
        android:layout_marginBottom="@dimen/marleft_right35"
        android:layout_marginLeft="@dimen/marleft_right41"
        android:layout_marginRight="@dimen/marleft_right41"
        android:drawableLeft="@mipmap/password_icon"
        android:hint="@string/please_input_password"
        android:drawablePadding="@dimen/marleft_right10"
        android:theme="@style/MyEditText"
        />



    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marleft_right35"
        android:layout_marginRight="@dimen/marleft_right35"
        android:layout_above="@+id/tv_register_now"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marleft_right15"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="@dimen/textsize16"
        android:textColor="@color/white"
        android:background="@drawable/shape_conner_blue_bg"


        />

    <TextView
        android:id="@+id/tv_register_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_third_login_txt"
        android:layout_marginBottom="@dimen/marleft_right35"
        android:layout_marginLeft="@dimen/marleft_right35"
        android:text="@string/register_now"
        android:textColor="@color/color99"
        android:textSize="@dimen/textsize14"
        />

    <TextView
        android:id="@+id/tv_foget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_third_login_txt"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/marleft_right35"
        android:layout_marginRight="@dimen/marleft_right35"
        android:text="@string/forget_password"
        android:textColor="@color/color99"
        android:textSize="@dimen/textsize14"
        />

    <RelativeLayout
        android:id="@+id/rl_third_login_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marleft_right83"
        android:layout_alignParentBottom="true"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_cc"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/tv_third_login"
            android:layout_marginLeft="@dimen/marleft_right35"
            android:layout_marginRight="@dimen/marleft_right35"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_third_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_login"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/textsize14"
            android:textColor="@color/color66"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_cc"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tv_third_login"
            android:layout_marginLeft="@dimen/marleft_right35"
            android:layout_marginRight="@dimen/marleft_right35"
            android:layout_centerVertical="true"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/marleft_right29"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/iv_qq"
            android:layout_alignParentBottom="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/weixin_icon"
                android:layout_centerHorizontal="true"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/iv_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/qq_icon"
                android:layout_centerHorizontal="true"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>