<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include layout="@layout/home_title"/>

    <TextView
        android:id="@+id/tv_action_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/height40"
        android:layout_marginLeft="@dimen/marleft_right41"
        android:text="@string/register"
        android:gravity="center_vertical"
        android:textSize="@dimen/textsize24"
        android:textColor="@color/textcolor_black"
        />

    <LinearLayout
        android:id="@+id/rl_input"
        android:layout_above="@+id/btn_register"
        android:layout_below="@+id/tv_action_type"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:inputType="phone"
            android:id="@+id/et_phone"
            android:layout_marginLeft="@dimen/marleft_right41"
            android:layout_marginRight="@dimen/marleft_right41"
            android:drawableLeft="@mipmap/phone_icon"
            android:hint="@string/please_input_phone"
            android:drawablePadding="@dimen/marleft_right10"
            android:theme="@style/MyEditText"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marleft_right20"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_check_code"
                android:layout_marginLeft="@dimen/marleft_right41"
                android:layout_marginRight="@dimen/marleft_right41"
                android:drawableLeft="@mipmap/code_icon"
                android:inputType="number"
                android:maxLength="6"
                android:hint="@string/please_input_verification_code"
                android:drawablePadding="@dimen/marleft_right10"
                android:theme="@style/MyEditText"
                />

            <Button
                android:id="@+id/btn_getcode"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:background="@drawable/shape_checkcode_btn_bg"
                android:text="获取"
                android:textColor="@color/lightblue"
                android:gravity="center"
                android:textSize="@dimen/textsize16"
                android:layout_alignBottom="@+id/et_check_code"
                android:layout_marginBottom="@dimen/marleft_right10"
                android:layout_alignParentRight="true"

                android:layout_marginRight="@dimen/marleft_right41"
                android:focusable="true"
                />
        </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:layout_above="@+id/et_confirm_password"
        android:layout_marginTop="@dimen/marleft_right20"
        android:layout_marginLeft="@dimen/marleft_right41"
        android:layout_marginRight="@dimen/marleft_right41"
        android:drawableLeft="@mipmap/password_icon"
        android:inputType="textPassword"
        android:maxLength="16"
        android:hint="@string/please_input_password"
        android:drawablePadding="@dimen/marleft_right10"
        android:theme="@style/MyEditText"
        />


    <EditText
        android:maxLength="16"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_confirm_password"
        android:layout_marginLeft="@dimen/marleft_right41"
        android:layout_marginTop="@dimen/marleft_right20"
        android:layout_marginRight="@dimen/marleft_right41"
        android:drawableLeft="@mipmap/password_icon"
        android:hint="@string/please_confirm_password"
        android:drawablePadding="@dimen/marleft_right10"
        android:theme="@style/MyEditText"
        />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marleft_right35"
        android:layout_marginRight="@dimen/marleft_right35"
        android:layout_above="@+id/rl_third_login_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marleft_right35"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="@dimen/textsize16"
        android:textColor="@color/white"
        android:background="@drawable/shape_conner_blue_bg"


        />


    <RelativeLayout
        android:id="@+id/rl_third_login_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marleft_right83"
        android:layout_alignParentBottom="true"
        >

        <View
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_cc"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/tv_third_login"
            android:layout_marginLeft="@dimen/marleft_right35"
            android:layout_marginRight="@dimen/marleft_right35"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_third_login"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/third_login"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/textsize14"
            android:textColor="@color/color66"
            />

        <View
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_cc"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tv_third_login"
            android:layout_marginLeft="@dimen/marleft_right35"
            android:layout_marginRight="@dimen/marleft_right35"
            android:layout_centerVertical="true"/>

    </RelativeLayout>


    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/marleft_right29"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/iv_qq"
            android:layout_alignParentBottom="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/weixin_icon"
                android:layout_centerHorizontal="true"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/iv_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/qq_icon"
                android:layout_centerHorizontal="true"
                />

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>